load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "instrument_controller",
    srcs = ["instrument_controller.cpp"],
    hdrs = ["instrument_controller.h"],
    deps = [
        ":instrument_data",
        ":instrument_definition",
        "//barelymusician/common:common_utils",
    ],
)

cc_library(
    name = "instrument_data",
    hdrs = ["instrument_data.h"],
)

cc_library(
    name = "instrument_definition",
    hdrs = ["instrument_definition.h"],
)

cc_library(
    name = "instrument_processor",
    srcs = ["instrument_processor.cpp"],
    hdrs = ["instrument_processor.h"],
    deps = [
        ":instrument_data",
        ":instrument_definition",
    ],
)

cc_test(
    name = "instrument_controller_test",
    srcs = ["instrument_controller_test.cpp"],
    deps = [
        ":instrument_controller",
        ":instrument_data",
        ":instrument_definition",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "instrument_processor_test",
    srcs = ["instrument_processor_test.cpp"],
    deps = [
        ":instrument_data",
        ":instrument_definition",
        ":instrument_processor",
        "@googletest//:gtest_main",
    ],
)
