load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "event",
    hdrs = ["event.h"],
    deps = [
        ":data",
        "//barelymusician:include",
    ],
)

cc_library(
    name = "data",
    srcs = ["data.cpp"],
    hdrs = ["data.h"],
    deps = [
        "//barelymusician:include",
    ],
)

cc_library(
    name = "event_queue",
    srcs = ["event_queue.cpp"],
    hdrs = ["event_queue.h"],
    deps = [
        ":event",
    ],
)

cc_library(
    name = "instrument",
    srcs = ["instrument.cpp"],
    hdrs = ["instrument.h"],
    deps = [
        ":data",
        ":event",
        ":event_queue",
        ":parameter",
        "//barelymusician:include",
    ],
)

cc_library(
    name = "parameter",
    srcs = ["parameter.cpp"],
    hdrs = ["parameter.h"],
    deps = [
        "//barelymusician:include",
    ],
)

cc_test(
    name = "parameter_test",
    srcs = ["parameter_test.cpp"],
    deps = [
        ":parameter",
        "@googletest//:gtest_main",
    ],
)
