load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "enveloped_voice",
    hdrs = ["enveloped_voice.h"],
    deps = [
        "//barelymusician",
        "//barelymusician/dsp:envelope",
        "//barelymusician/dsp:voice",
    ],
)

cc_library(
    name = "generic_instrument",
    hdrs = ["generic_instrument.h"],
    deps = [
        "//barelymusician",
    ],
)

cc_library(
    name = "percussion_instrument",
    srcs = ["percussion_instrument.cpp"],
    hdrs = ["percussion_instrument.h"],
    deps = [
        ":enveloped_voice",
        ":generic_instrument",
        "//barelymusician",
        "//barelymusician/dsp:sample_player",
    ],
)

cc_library(
    name = "sampler_instrument",
    srcs = ["sampler_instrument.cpp"],
    hdrs = ["sampler_instrument.h"],
    deps = [
        ":enveloped_voice",
        ":generic_instrument",
        "//barelymusician",
        "//barelymusician/dsp:polyphonic_voice",
        "//barelymusician/dsp:sample_player",
    ],
)

cc_library(
    name = "synth_instrument",
    srcs = ["synth_instrument.cpp"],
    hdrs = ["synth_instrument.h"],
    deps = [
        ":enveloped_voice",
        ":generic_instrument",
        "//barelymusician",
        "//barelymusician/dsp:dsp_utils",
        "//barelymusician/dsp:oscillator",
        "//barelymusician/dsp:polyphonic_voice",
    ],
)
