load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "custom_instrument",
    hdrs = ["custom_instrument.h"],
    visibility = ["//visibility:private"],
    deps = [
        "//barelymusician",
    ],
)

cc_library(
    name = "percussion_instrument",
    srcs = ["percussion_instrument.cpp"],
    hdrs = ["percussion_instrument.h"],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":custom_instrument",
        "//barelymusician",
        "//barelymusician/dsp:enveloped_voice",
        "//barelymusician/dsp:gain_processor",
        "//barelymusician/dsp:sample_player",
    ],
    alwayslink = True,
)

cc_library(
    name = "sampler_instrument",
    srcs = ["sampler_instrument.cpp"],
    hdrs = ["sampler_instrument.h"],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":custom_instrument",
        "//barelymusician",
        "//barelymusician/dsp:enveloped_voice",
        "//barelymusician/dsp:gain_processor",
        "//barelymusician/dsp:polyphonic_voice",
        "//barelymusician/dsp:sample_player",
    ],
    alwayslink = True,
)

cc_library(
    name = "synth_instrument",
    srcs = ["synth_instrument.cpp"],
    hdrs = ["synth_instrument.h"],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":custom_instrument",
        "//barelymusician",
        "//barelymusician/dsp:dsp_utils",
        "//barelymusician/dsp:enveloped_voice",
        "//barelymusician/dsp:gain_processor",
        "//barelymusician/dsp:oscillator",
        "//barelymusician/dsp:polyphonic_voice",
    ],
    alwayslink = True,
)
