load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "control",
    srcs = ["control.cpp"],
    hdrs = ["control.h"],
    deps = [
        "//barelymusician:barelymusician_headeronly",
    ],
)

cc_library(
    name = "engine",
    srcs = ["engine.cpp"],
    hdrs = ["engine.h"],
    visibility = ["//barelymusician:__pkg__"],
    deps = [
        ":id",
        ":instrument",
        ":mutable_data",
        ":performer",
        ":status",
        "//barelymusician:barelymusician_headeronly",
        "//barelymusician/common:find_or_null",
        "//barelymusician/common:seconds",
    ],
)

cc_library(
    name = "effect",
    srcs = ["effect.cpp"],
    hdrs = ["effect.h"],
    deps = [
        "//barelymusician:barelymusician_headeronly",
    ],
)

cc_library(
    name = "event",
    hdrs = ["event.h"],
)

cc_library(
    name = "id",
    hdrs = ["id.h"],
    deps = [
        "//barelymusician:barelymusician_headeronly",
    ],
)

cc_library(
    name = "instrument",
    srcs = ["instrument.cpp"],
    hdrs = ["instrument.h"],
    deps = [
        ":control",
        ":effect",
        ":event",
        ":id",
        ":message",
        ":message_queue",
        ":mutable_data",
        ":status",
        "//barelymusician:barelymusician_headeronly",
        "//barelymusician/common:find_or_null",
        "//barelymusician/common:seconds",
    ],
)

cc_library(
    name = "message",
    hdrs = ["message.h"],
    deps = [
        ":id",
    ],
)

cc_library(
    name = "message_queue",
    srcs = ["message_queue.cpp"],
    hdrs = ["message_queue.h"],
    deps = [
        ":message",
    ],
)

cc_library(
    name = "mutable_data",
    hdrs = ["mutable_data.h"],
)

cc_library(
    name = "performer",
    srcs = ["performer.cpp"],
    hdrs = ["performer.h"],
    deps = [
        ":event",
        ":id",
        ":status",
        "//barelymusician:barelymusician_headeronly",
        "//barelymusician/common:find_or_null",
    ],
)

cc_library(
    name = "status",
    hdrs = ["status.h"],
)

cc_test(
    name = "control_test",
    srcs = ["control_test.cpp"],
    deps = [
        ":control",
        "//barelymusician:barelymusician_headeronly",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "effect_test",
    srcs = ["effect_test.cpp"],
    deps = [
        ":effect",
        "//barelymusician:barelymusician_headeronly",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "engine_test",
    srcs = ["engine_test.cpp"],
    deps = [
        ":control",
        ":engine",
        ":id",
        ":instrument",
        ":status",
        "//barelymusician:barelymusician_headeronly",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "event_test",
    srcs = ["event_test.cpp"],
    deps = [
        ":event",
        "//barelymusician:barelymusician_headeronly",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "instrument_test",
    srcs = ["instrument_test.cpp"],
    deps = [
        ":control",
        ":instrument",
        ":status",
        "//barelymusician:barelymusician_headeronly",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "message_queue_test",
    srcs = ["message_queue_test.cpp"],
    deps = [
        ":message",
        ":message_queue",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "mutable_data_test",
    srcs = ["mutable_data_test.cpp"],
    deps = [
        ":mutable_data",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "performer_test",
    srcs = ["performer_test.cpp"],
    deps = [
        ":id",
        ":performer",
        ":status",
        "//barelymusician:barelymusician_headeronly",
        "@googletest//:gtest_main",
    ],
)
